--- a/str/parseq/configs/main.yaml
+++ b/str/parseq/configs/main.yaml
@@ -20,7 +20,7 @@ model:
 
 data:
   _target_: strhub.data.module.SceneTextDataModule
-  root_dir: data
+  root_dir: ../data/Football/jnp/football_lmdb/lmdb
   train_dir: ???
   batch_size: ${model.batch_size}
   img_size: ${model.img_size}
